# e2e-xgboost

./: .gitignore  .pre-commit-config.yaml  README.ipynb  README.md  containerfile  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml
ci/: byod_e2e_xgboost.sh
dist_xgboost/: __init__.py  constants.py  data.py  infer.py  serve.py  train.py
notebooks/: 01-Distributed_Training.ipynb  02-Validation.ipynb  03-Serving.ipynb
tests/: test_infer.py  test_notebooks.py  test_python_scripts.py  test_train.py
