# pyproject.toml
[project]
name = "e2e-xgboost"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.6",
    "matplotlib==3.10.0",
    "mlflow==2.19.0",
    "ray[data,serve,train]>=2.44.1",
    "scikit-learn==1.6.0",
    "xgboost>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "nbformat>=5.10.4",
    "pre-commit==4.1.0",
]

[tool.ruff]
line-length = 150
target-version = "py38"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E226"]

[tool.ruff.format]
quote-style = "double"
